# aoc

./: pyproject.toml
2023/01/: solution.py
2023/02/: solution.py
2023/03/: solution.py
2023/04/: solution.py
2023/05/: solution.py
2023/06/: solution.py
2023/07/: solution.py
2023/08/: solution.py
2023/09/: solution.py
2023/10/: solution.py
2023/11/: solution.py
2023/12/: solution.py
2023/13/: solution.py
2023/14/: solution.py
2023/15/: solution.py
2023/16/: solution.py
2023/17/: solution.py
2023/18/: solution.py
2023/19/: solution.py
2023/20/: solution.py
2023/21/: solution.py
2023/22/: solution.py
2023/23/: solution.py
2023/24/: solution.py
2023/25/: solution.py
