[tool.poetry]
name = "2023"
version = "0.1.0"
description = ""
authors = ["Tor Larsson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
advent-of-code-data = "^2.0.1"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
